tests/diagnostics/constants/duplicate_constant/expect.txt
# exit: 1
input/main.lang0:2:1: error: duplicate constant 'FOO'
  FOO := 2
  ^
